--- a/Chatapp/server/.env
+++ b/Chatapp/server/.env
@@ -1,3 +1,8 @@
 MONGODB_URI="mongodb+srv://arnabchoudhury:arnab123@cluster0.f3mvoak.mongodb.net"
 PORT=5000
 JWT_SECRET="gs#secret"
+
+CLOUDINARY_CLOUD_NAME='dfhspqwr2'
+CLOUDINARY_API_KEY= '363359352928543'
+CLOUDINARY_API_SECRET= '_7qlWBBxvKb21YZYEhWP-TbSxgM'
+
